     dialog; thanks to Stefano Pettini. (BR 341661)
   * Fix background color of the lyrics applet, thanks to Stefano Pettini. (BR 314854)
   * Fix Organize tracks / Guess tags presets not persisted properly;
     thanks to Stefano Pettini. (BR 226144)
   * Fix MPRIS2 DesktopEntry name, makes media controls in Plasma 5.7 taskbar work
     again; thanks to Antonio Rojas, Rex Dieter. (BR 365275)


VERSION 2.8.90
  FEATURES:
   * Database configuration dialog now has a "test connection" button.
   * Add Service entries for directories. (BR 229708)
   * Collection Browser scrolls back to its original position when the filter is cleared.
     (BR 188074)
   * Notification Center support on Mac OS X.
   * Statistics synchronization between Amarok collections and
     Amarok 1.4, Amarok 2.x, Apple iTunes, Banshee, Clementine, and
     Rhythmbox track databases.
   * Usability of the Organize Files dialog has been improved.
   * Wikipedia can now be also used over SSL.
   * New ASCII Analyzer option in the Analyzer widget. Patch provided by Matej Repinc

  CHANGES:
   * Last played and first played dates now use the same formatter than in the playlist
     giving a human readable date such as "one minute ago" in meta edit dialog.
   * "Import" button under Configure Amarok -> Local Collection no longer
     serves to import statistics from Amarok 1.4 and iTunes, and has been
     renamed to "Import batch file" to reflect the change.
   * Configure Amarok -> Metadata tab includes new buttons to add and
     reconfigure synchronization targets.
   * When ffmpeg is not available, the Transcode dialog is no longer skipped; info message
     is shown instead. Patch by Jai Luthra. (BR 317902)
   * Amarok now uses some C++11 features. The subset used is defined by the 
     compilers currently supported by KDE.

  BUGFIXES:
   * Fixed longstanding APG zero-length playlist bug (BR 313762, BR 315206,
     BR 323945)
   * Fix a crash when searching the Icecast directory. (BR 334479)